--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -1,31 +1,31 @@
-<RCC>
+<!DOCTYPE RCC><RCC version="1.0">
     <qresource prefix="/icons">
-        <file alias="about_qt">res/icons/about_qt.png</file>
-        <file alias="about">res/icons/about.png</file>
-        <file alias="add">res/icons/add.png</file>
-        <file alias="address-book">res/icons/address-book.png</file>
-        <file alias="bitcoin_testnet.ico">res/icons/bitcoin_testnet.ico</file>
-        <file alias="bitcoin_testnet">res/icons/bitcoin_testnet.png</file>
-        <file>res/icons/bitcoin.icns</file>
-        <file>res/icons/bitcoin.ico</file>
         <file alias="bitcoin">res/icons/bitcoin.png</file>
-        <file alias="checvron">res/icons/chevron.png</file>
-        <file alias="clock1">res/icons/clock1.png</file>
-        <file alias="clock2">res/icons/clock2.png</file>
-        <file alias="clock3">res/icons/clock3.png</file>
-        <file alias="clock4">res/icons/clock4.png</file>
-        <file alias="clock5">res/icons/clock5.png</file>
-        <file alias="configure">res/icons/configure.png</file>
+        <file alias="address-book">res/icons/address-book.png</file>
+        <file alias="quit">res/icons/quit.png</file>
+        <file alias="send">res/icons/send.png</file>
         <file alias="connect0">res/icons/connect0.png</file>
         <file alias="connect1">res/icons/connect1.png</file>
         <file alias="connect2">res/icons/connect2.png</file>
         <file alias="connect3">res/icons/connect3.png</file>
         <file alias="connect4">res/icons/connect4.png</file>
-        <file alias="debugwindow">res/icons/debugwindow.png</file>
-        <file alias="edit">res/icons/edit.png</file>
-        <file alias="editcopy">res/icons/editcopy.png</file>
+        <file alias="transaction0">res/icons/transaction0.png</file>
+        <file alias="transaction2">res/icons/transaction2.png</file>
+        <file alias="transaction_conflicted">res/icons/transaction_conflicted.png</file>
+        <file alias="clock1">res/icons/clock1.png</file>
+        <file alias="clock2">res/icons/clock2.png</file>
+        <file alias="clock3">res/icons/clock3.png</file>
+        <file alias="clock4">res/icons/clock4.png</file>
+        <file alias="clock5">res/icons/clock5.png</file>
+        <file alias="eye">res/icons/eye.png</file>
+        <file alias="eye_minus">res/icons/eye_minus.png</file>
+        <file alias="eye_plus">res/icons/eye_plus.png</file>
+        <file alias="configure">res/icons/configure.png</file>
+        <file alias="receive">res/icons/receive.png</file>
         <file alias="editpaste">res/icons/editpaste.png</file>
-        <file alias="export">res/icons/export.png</file>
+        <file alias="editcopy">res/icons/editcopy.png</file>
+        <file alias="add">res/icons/add.png</file>
+        <file alias="edit">res/icons/edit.png</file>
         <file alias="Exports_27">res/icons/Exports_27.png</file>
         <file alias="Exports_29">res/icons/Exports_29.png</file>
         <file alias="Exports_31">res/icons/Exports_31.png</file>
@@ -46,56 +46,48 @@
         <file alias="Exports_67">res/icons/Exports_67.png</file>
         <file alias="Exports_68">res/icons/Exports_68.png</file>
         <file alias="Exports_69">res/icons/Exports_69.png</file>
-        <file alias="eye_minus">res/icons/eye_minus.png</file>
-        <file alias="eye_plus">res/icons/eye_plus.png</file>
-        <file alias="eye">res/icons/eye.png</file>
-        <file alias="filesave">res/icons/filesave.png</file>
-        <file alias="fontbigger">res/icons/fontbigger.png</file>
-        <file alias="fontsmaller">res/icons/fontsmaller.png</file>
         <file alias="history">res/icons/history.png</file>
-        <file alias="info">res/icons/info.png</file>
         <file alias="key">res/icons/key.png</file>
-        <file alias="lock_closed">res/icons/lock_closed.png</file>
-        <file alias="lock_open">res/icons/lock_open.png</file>
         <file alias="masternode">res/icons/masternode.png</file>
         <file alias="settings">res/icons/nav-settings.png</file>
         <file alias="notsynced">res/icons/notsynced.png</file>
-        <file>res/icons/old_bitcoin_testnet.ico</file>
-        <file>res/icons/old_bitcoin.icns</file>
         <file alias="old_bit">res/icons/old_bitcoin.ico</file>
         <file alias="old_bitcoin">res/icons/old_bitcoin.png</file>
-        <file alias="open">res/icons/open.png</file>
-        <file alias="overview">res/icons/overview.png</file>
         <file alias="qrcode">res/icons/qrcode.png</file>
-        <file alias="quit">res/icons/quit.png</file>
-        <file alias="receive">res/icons/receive.png</file>
-        <file alias="remove">res/icons/remove.png</file>
-        <file alias="send">res/icons/send.png</file>
+        <file alias="zerocoin">res/icons/zerocoin.png</file>
+        <file alias="zoinodes">res/icons/zoinodes.png</file>
+        <file alias="overview">res/icons/overview.png</file>
+        <file alias="export">res/icons/export.png</file>
         <file alias="synced">res/icons/synced.png</file>
-        <file alias="transaction_abandoned">res/icons/transaction_abandoned.png</file>
-        <file alias="transaction_conflicted">res/icons/transaction_conflicted.png</file>
-        <file alias="transaction0">res/icons/transaction0.png</file>
-        <file alias="transaction2">res/icons/transaction2.png</file>
-        <file alias="tx_inout">res/icons/tx_inout.png</file>
-        <file alias="tx_input">res/icons/tx_input.png</file>
+        <file alias="remove">res/icons/remove.png</file>
         <file alias="tx_mined">res/icons/tx_mined.png</file>
+        <file alias="tx_input">res/icons/tx_input.png</file>
         <file alias="tx_output">res/icons/tx_output.png</file>
+        <file alias="tx_inout">res/icons/tx_inout.png</file>
+        <file alias="lock_closed">res/icons/lock_closed.png</file>
+        <file alias="lock_open">res/icons/lock_open.png</file>
+        <file alias="key">res/icons/key.png</file>
+        <file alias="filesave">res/icons/filesave.png</file>
+        <file alias="debugwindow">res/icons/debugwindow.png</file>
+        <file alias="open">res/icons/open.png</file>
+        <file alias="info">res/icons/info.png</file>
+        <file alias="about">res/icons/about.png</file>
+        <file alias="about_qt">res/icons/about_qt.png</file>
         <file alias="verify">res/icons/verify.png</file>
         <file alias="vote">res/icons/vote.png</file>
         <file alias="warning">res/icons/warning.png</file>
-        <file>res/icons/zcoin_testnet.ico</file>
+        <file alias="fontbigger">res/icons/fontbigger.png</file>
+        <file alias="fontsmaller">res/icons/fontsmaller.png</file>
+        <file alias="chevron">res/icons/chevron.png</file>
         <file alias="zcoin_testnet">res/icons/zcoin_testnet.png</file>
-        <file>res/icons/zcoin.icns</file>
-        <file>res/icons/zcoin.ico</file>
         <file alias="zcoin">res/icons/zcoin.png</file>
-        <file alias="zerocoin">res/icons/zerocoin.png</file>
         <file alias="zoin-logo-white">res/icons/zoin-logo-white.png</file>
         <file alias="fees">res/icons/fees.png</file>
         <file alias="zoin">res/icons/zoin.png</file>
         <file alias="down">res/icons/down-arrow.png</file>
         <file alias="txup">res/icons/txup.png</file>
         <file alias="txdown">res/icons/txdown.png</file>
-        <file alias="zoinodes">res/icons/zoinodes.png</file>
+        <file alias="transaction_abandoned">res/icons/transaction_abandoned.png</file>
     </qresource>
     <qresource prefix="/movies">
         <file alias="spinner-000">res/movies/spinner-000.png</file>
@@ -134,7 +126,6 @@
         <file alias="spinner-033">res/movies/spinner-033.png</file>
         <file alias="spinner-034">res/movies/spinner-034.png</file>
         <file alias="spinner-035">res/movies/spinner-035.png</file>
-        <file>res/movies/update_spinner.mng</file>
         <file alias="successful_tx">res/movies/successful_tx.gif</file>
     </qresource>
     <qresource prefix="/images">
