--- a/src/qt/bitcoin.qrc
+++ b/src/qt/bitcoin.qrc
@@ -4,11 +4,11 @@
         <file alias="address-book">res/icons/address-book.png</file>
         <file alias="quit">res/icons/quit.png</file>
         <file alias="send">res/icons/send.png</file>
-        <file alias="connect0">res/icons/connect0.png</file>
-        <file alias="connect1">res/icons/connect1.png</file>
-        <file alias="connect2">res/icons/connect2.png</file>
-        <file alias="connect3">res/icons/connect3.png</file>
-        <file alias="connect4">res/icons/connect4.png</file>
+        <file alias="connect_0">res/icons/connect0.png</file>
+        <file alias="connect_1">res/icons/connect1.png</file>
+        <file alias="connect_2">res/icons/connect2.png</file>
+        <file alias="connect_3">res/icons/connect3.png</file>
+        <file alias="connect_4">res/icons/connect4.png</file>
         <file alias="transaction0">res/icons/transaction0.png</file>
         <file alias="transaction2">res/icons/transaction2.png</file>
         <file alias="transaction_conflicted">res/icons/transaction_conflicted.png</file>
@@ -20,8 +20,8 @@
         <file alias="eye">res/icons/eye.png</file>
         <file alias="eye_minus">res/icons/eye_minus.png</file>
         <file alias="eye_plus">res/icons/eye_plus.png</file>
-        <file alias="configure">res/icons/configure.png</file>
-        <file alias="receive">res/icons/receive.png</file>
+        <file alias="options">res/icons/configure.png</file>
+        <file alias="receiving_addresses">res/icons/receive.png</file>
         <file alias="editpaste">res/icons/editpaste.png</file>
         <file alias="editcopy">res/icons/editcopy.png</file>
         <file alias="add">res/icons/add.png</file>
@@ -47,12 +47,9 @@
         <file alias="Exports_68">res/icons/Exports_68.png</file>
         <file alias="Exports_69">res/icons/Exports_69.png</file>
         <file alias="history">res/icons/history.png</file>
-        <file alias="key">res/icons/key.png</file>
         <file alias="masternode">res/icons/masternode.png</file>
         <file alias="settings">res/icons/nav-settings.png</file>
         <file alias="notsynced">res/icons/notsynced.png</file>
-        <file alias="old_bit">res/icons/old_bitcoin.ico</file>
-        <file alias="old_bitcoin">res/icons/old_bitcoin.png</file>
         <file alias="qrcode">res/icons/qrcode.png</file>
         <file alias="zerocoin">res/icons/zerocoin.png</file>
         <file alias="zoinodes">res/icons/zoinodes.png</file>
@@ -143,18 +140,16 @@
         <file alias="E6">res/images/Exports_05.png</file>
         <file alias="E7">res/images/Exports_03.png</file>
         <file alias="paperWallet">res/images/Paper-Wallet.png</file>
-    </qresource>
-    <qresource prefix="/buttons">
-        <file alias="btctalk">res/buttons/bitcointalk.png</file>
-        <file alias="fb">res/buttons/facebook.png</file>
-        <file alias="git">res/buttons/github.png</file>
-        <file alias="reddit">res/buttons/reddit.png</file>
-        <file alias="slack">res/buttons/slack.png</file>
-        <file alias="slackinv">res/buttons/slackinvite.png</file>
-        <file alias="twitter">res/buttons/twitter.png</file>
-        <file alias="web">res/buttons/website.png</file>
-        <file alias="discord">res/buttons/discord.png</file>
-        <file alias="telegram">res/buttons/telegram.png</file>
+        <file alias="btctalk">res/images/bitcointalk.png</file>
+        <file alias="fb">res/images/facebook.png</file>
+        <file alias="git">res/images/github.png</file>
+        <file alias="reddit">res/images/reddit.png</file>
+        <file alias="slack">res/images/slack.png</file>
+        <file alias="slackinv">res/images/slackinvite.png</file>
+        <file alias="twitter">res/images/twitter.png</file>
+        <file alias="web">res/images/website.png</file>
+        <file alias="discord">res/images/discord.png</file>
+        <file alias="telegram">res/images/telegram.png</file>
     </qresource>
     <qresource prefix="/fonts">
         <file alias="ZoinBlack">res/fonts/ZoinBlack.ttf</file>
