QT Patch - Bug Fix

--- a/src/qt/forms/signverifymessagedialog.ui
+++ b/src/qt/forms/signverifymessagedialog.ui
@@ -302,7 +302,7 @@
            </property>
            <property name="icon">
             <iconset>
-             <normaloff>:/icons/transaction_0</normaloff>:/icons/transaction_0</iconset>
+             <normaloff>:/icons/transaction0</normaloff>:/icons/transaction0</iconset>
            </property>
            <property name="autoDefault">
             <bool>false</bool>
