--- a/src/qt/forms/sendcoinsdialog.ui
+++ b/src/qt/forms/sendcoinsdialog.ui
@@ -193,7 +193,7 @@ color: white;</string>
              <string/>
             </property>
             <property name="icon">
-             <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+             <iconset resource="../bitcoin.qrc">
               <normaloff>:/icons/Exports_45</normaloff>:/icons/Exports_45</iconset>
             </property>
             <property name="iconSize">
@@ -296,7 +296,7 @@ border:0
           <string/>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+          <iconset resource="../bitcoin.qrc">
            <normaloff>:/icons/fees</normaloff>:/icons/fees</iconset>
          </property>
          <property name="iconSize">
@@ -348,7 +348,7 @@ border:0
           <string/>
          </property>
          <property name="icon">
-          <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+          <iconset resource="../bitcoin.qrc">
            <normaloff>:/icons/settings</normaloff>:/icons/settings</iconset>
          </property>
          <property name="iconSize">
@@ -831,7 +831,7 @@ width:105px;</string>
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc"/>
+  <include location="../bitcoin.qrc"/>
  </resources>
  <connections/>
 </ui>
