--- a/src/qt/forms/votingpage.ui
+++ b/src/qt/forms/votingpage.ui
@@ -495,7 +495,7 @@ color: white;</string>
                <string/>
               </property>
               <property name="icon">
-               <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+               <iconset resource="../bitcoin.qrc">
                 <normaloff>:/icons/Exports_45</normaloff>:/icons/Exports_45</iconset>
               </property>
               <property name="iconSize">
@@ -844,7 +844,7 @@ border-style:solid;</string>
                   <string/>
                  </property>
                  <property name="icon">
-                  <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+                  <iconset resource="../bitcoin.qrc">
                    <normaloff>:/icons/Exports_47</normaloff>:/icons/Exports_47</iconset>
                  </property>
                  <property name="iconSize">
@@ -1316,7 +1316,7 @@ width:105px;</string>
   </layout>
  </widget>
  <resources>
-  <include location="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc"/>
+  <include location="../bitcoin.qrc"/>
  </resources>
  <connections/>
 </ui>
