--- a/src/qt/forms/menupage.ui
+++ b/src/qt/forms/menupage.ui
@@ -405,7 +405,7 @@ border-style: none;</string>
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+         <iconset resource="../bitcoin.qrc">
           <normaloff>:/icons/zoin</normaloff>:/icons/zoin</iconset>
         </property>
         <property name="iconSize">
@@ -473,7 +473,7 @@ border:5px solid color: #4a0e95;
       <string>Overview</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_27</normaloff>
        <normalon>:/icons/Exports_60</normalon>:/icons/Exports_27</iconset>
      </property>
@@ -539,7 +539,7 @@ border:5px solid color: #4a0e95;
       <string>Send</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_29</normaloff>
        <normalon>:/icons/Exports_61</normalon>:/icons/Exports_29</iconset>
      </property>
@@ -602,7 +602,7 @@ border:5px solid color: #4a0e95;
       <string>Receive</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_31</normaloff>
        <normalon>:/icons/Exports_63</normalon>:/icons/Exports_31</iconset>
      </property>
@@ -671,7 +671,7 @@ border:5px solid color: #4a0e95;
       <string>Zerocoin</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_33</normaloff>
        <normalon>:/icons/Exports_64</normalon>:/icons/Exports_33</iconset>
      </property>
@@ -734,7 +734,7 @@ border:5px solid color: #4a0e95;
       <string>Transactions</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_35</normaloff>
        <normalon>:/icons/Exports_65</normalon>:/icons/Exports_35</iconset>
      </property>
@@ -797,7 +797,7 @@ border:5px solid color: #4a0e95;
       <string>Addresses</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_37</normaloff>
        <normalon>:/icons/Exports_66</normalon>:/icons/Exports_37</iconset>
      </property>
@@ -854,7 +854,7 @@ text-align:left;
       <string>Zoinode</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_41</normaloff>:/icons/Exports_41</iconset>
      </property>
      <property name="iconSize">
@@ -916,7 +916,7 @@ border:5px solid color: #4a0e95;
       <string>Community</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_39</normaloff>
        <normalon>:/icons/Exports_67</normalon>
        <activeon>:/icons/Exports_67</activeon>
@@ -984,7 +984,7 @@ border:5px solid color: #4a0e95;
       <string>Vote</string>
      </property>
      <property name="icon">
-      <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+      <iconset resource="../bitcoin.qrc">
        <normaloff>:/icons/Exports_43</normaloff>:/icons/Exports_43</iconset>
      </property>
      <property name="iconSize">
@@ -1116,7 +1116,7 @@ text-align:center;
          <string> Learn more about Zoin</string>
         </property>
         <property name="icon">
-         <iconset resource="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc">
+         <iconset resource="../bitcoin.qrc">
           <normaloff>:/icons/zoin-logo-white</normaloff>:/icons/zoin-logo-white</iconset>
         </property>
         <property name="iconSize">
@@ -1136,7 +1136,7 @@ text-align:center;
   </layout>
  </widget>
  <resources>
-  <include location="../../../../../coreupgrade/zoin/src/qt/bitcoin.qrc"/>
+  <include location="../bitcoin.qrc"/>
  </resources>
  <connections/>
 </ui>
